crates/lang/tests/ui/contract/fail/event-too-many-topics-anonymous.stderr
error[E0277]: the trait bound `EventTopics<4_usize>: RespectTopicLimit<2_usize>` is not satisfied
  --> tests/ui/contract/fail/event-too-many-topics-anonymous.rs:27:5
   |
27 | /     pub struct Event {
28 | |         #[ink(topic)]
29 | |         arg_1: i8,
30 | |         #[ink(topic)]
...  |
35 | |         arg_4: i32,
36 | |     }
   | |_____^ the trait `RespectTopicLimit<2_usize>` is not implemented for `EventTopics<4_usize>`
   |
   = help: the following implementations were found:
             <EventTopics<0_usize> as RespectTopicLimit<0_usize>>
             <EventTopics<0_usize> as RespectTopicLimit<10_usize>>
             <EventTopics<0_usize> as RespectTopicLimit<11_usize>>
             <EventTopics<0_usize> as RespectTopicLimit<12_usize>>
           and 87 others
note: required by a bound in `EventRespectsTopicLimit`
  --> src/codegen/event/topics.rs:48:43
   |
48 |     <Event as EventLenTopics>::LenTopics: RespectTopicLimit<LEN_MAX_TOPICS>,
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EventRespectsTopicLimit`
